added crud operations on accounts

--- a/public/accounts/add-account/index.html
+++ b/public/accounts/add-account/index.html
@@ -10,7 +10,6 @@
     />
 
     <script src="/assets/scripts/utils.js"></script>
-    <script src="/assets/scripts/utils.js"></script>
     <title>Ecommerce Dashboard</title>
   </head>
   <body>
@@ -287,7 +286,7 @@
                       >
                         <option value="admin">Admin</option>
                         <option value="editor">Editor</option>
-                        <option value="viewr">Viewer</option>
+                        <option value="viewer">Viewer</option>
                       </select>
                     </div>
                     <!-- Modal footer -->
@@ -317,6 +316,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
     <script src="/assets/scripts/postloadhtml.js"></script>
-    <script src="/assets/scripts/add-account.js"></script>
+    <script src="./add-account.js"></script>
   </body>
 </html>
