--- a/public/accounts/index.html
+++ b/public/accounts/index.html
@@ -79,6 +79,7 @@
                 <ul class="py-1" role="none">
                   <li>
                     <a
+                      id="acc-role"
                       href="#"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                       role="menuitem"
@@ -329,6 +330,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
     <script src="/assets/scripts/postloadhtml.js"></script>
-    <script src="../assets/scripts/accounts.js"></script>
+    <script src="./accounts.js"></script>
   </body>
 </html>
