--- a/public/users/index.html
+++ b/public/users/index.html
@@ -322,6 +322,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
     <script src="/assets/scripts/postloadhtml.js"></script>
-    <script src="../assets/scripts/users.js"></script>
+    <script src="./users.js"></script>
   </body>
 </html>
