--- a/public/accounts/edit-account/index.html
+++ b/public/accounts/edit-account/index.html
@@ -8,9 +8,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"
       rel="stylesheet"
     />
-
     <script src="/assets/scripts/utils.js"></script>
-    <script src="/assets/scripts/utils.js"></script>
+    <script src="./edit-account.js"></script>
     <title>Ecommerce Dashboard</title>
   </head>
   <body>
@@ -232,12 +231,13 @@
                     </h3>
                   </div>
                   <!-- Modal body -->
-                  <form class="p-4 space-y-4 md:p-5">
+                  <form id="edit-account-form" class="p-4 space-y-4 md:p-5">
                     <div class="flex flex-col gap-2 my-6">
                       <label class="text-xs font-semibold leading-4" for="name"
                         >Name</label
                       >
                       <input
+                        oninput="updateInputValue(this)"
                         style="background-color: #f4f4f4"
                         type="text"
                         name="name"
@@ -251,6 +251,7 @@
                         >Email</label
                       >
                       <input
+                        oninput="updateInputValue(this)"
                         style="background-color: #f4f4f4"
                         type="email"
                         name="email"
@@ -267,6 +268,7 @@
                         >Password</label
                       >
                       <input
+                        oninput="updateInputValue(this)"
                         style="background-color: #f4f4f4"
                         type="password"
                         name="password"
@@ -280,6 +282,7 @@
                         >Role</label
                       >
                       <select
+                        oninput="updateInputValue(this)"
                         style="background-color: #f4f4f4"
                         name="role"
                         id="role"
@@ -296,12 +299,14 @@
                     class="flex items-center gap-4 p-4 border-t border-gray-200 rounded-b md:p-5"
                   >
                     <button
+                      onclick="updateAccount()"
                       type="button"
                       class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
                     >
                       Update
                     </button>
                     <button
+                      onclick="deleteAccount()"
                       type="button"
                       class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
                     >
