CRUD on Products

--- a/public/products/index.html
+++ b/public/products/index.html
@@ -234,33 +234,6 @@
                     <option value="women">Women</option>
                     <option value="kid">Kids</option>
                   </select>
-                  <div class="flex items-center gap-3">
-                    <input
-                      style="background-color: #f4f4f4"
-                      type="text"
-                      name="search"
-                      id="search"
-                      class="bg-[#f4f4f4] text-[#6f767e] font-medium px-2 py-1.5 rounded-lg border-0 outline-none"
-                      placeholder="Search"
-                    />
-                    <button
-                      class="cursor-pointer flex justify-center items-center w-8 h-8 shadow-[0px_2px_8px_rgba(0,0,0,0.12)] bg-[#fcfcfc] rounded-[65px] border-0"
-                    >
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 24 24"
-                        fill="none"
-                        stroke="currentColor"
-                        stroke-width="2"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        class="w-4 h-4"
-                      >
-                        <circle cx="11" cy="11" r="8"></circle>
-                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                      </svg>
-                    </button>
-                  </div>
                 </div>
                 <div>
                   <button
@@ -268,7 +241,7 @@
                     data-modal-toggle="default-modal"
                     class="box-border px-4 py-2 text-sm font-semibold leading-4 text-white bg-blue-700 rounded-lg cursor-pointer hover:bg-blue-800"
                   >
-                    Add Product
+                    <a href="./add-product/"> Add Product </a>
                   </button>
                 </div>
               </div>
@@ -317,143 +290,7 @@
                             </th>
                           </tr>
                         </thead>
-                        <tbody>
-                          <tr class="odd:bg-[#efefef] even:bg-[#fcfcfc]">
-                            <td class="px-6 py-2">
-                              <div class="flex items-center gap-2">
-                                <div>
-                                  <img
-                                    width="63"
-                                    height="80"
-                                    src="../assets/img/product-img.png"
-                                    alt="product"
-                                  />
-                                </div>
-                                <div class="flex flex-col">
-                                  <p
-                                    class="text-[#1a1d1f] text-[15px] font-bold"
-                                  >
-                                    Product - 3600
-                                  </p>
-                                </div>
-                              </div>
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#212529] text-[15px] font-bold"
-                            >
-                              $ 2188,46
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#1a1d1f] text-[15px] font-bold"
-                            >
-                              4
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#1a1d1f] text-[15px] font-bold"
-                            >
-                              Men
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#212529] text-[15px] font-bold"
-                            >
-                              14/09/2021
-                            </td>
-                            <td class="px-6 py-4">
-                              <div class="flex gap-2">
-                                <button
-                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
-                                >
-                                  <img
-                                    width="36"
-                                    src="../assets/img/Icon-visibility.png"
-                                    alt=""
-                                  />
-                                </button>
-                                <button
-                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
-                                >
-                                  <img
-                                    width="36"
-                                    src="../assets/img/pen.png"
-                                    alt=""
-                                  />
-                                </button>
-                                <button
-                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
-                                >
-                                  <img
-                                    width="36"
-                                    src="../assets/img/Icon-close.png"
-                                    alt=""
-                                  />
-                                </button>
-                              </div>
-                            </td>
-                          </tr>
-                          <tr class="odd:bg-[#efefef] even:bg-[#fcfcfc]">
-                            <td class="px-6 py-2">
-                              <div class="flex items-center gap-2">
-                                <div>
-                                  <img
-                                    width="63"
-                                    height="80"
-                                    src="../assets/img/product-img.png"
-                                    alt="product"
-                                  />
-                                </div>
-                                <div class="flex flex-col">
-                                  <p
-                                    class="text-[#1a1d1f] text-[15px] font-bold"
-                                  >
-                                    Product - 3600
-                                  </p>
-                                </div>
-                              </div>
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#212529] text-[15px] font-bold"
-                            >
-                              $ 2188,46
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#1a1d1f] text-[15px] font-bold"
-                            >
-                              4
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#1a1d1f] text-[15px] font-bold"
-                            >
-                              Women
-                            </td>
-                            <td
-                              class="px-6 py-4 text-[#212529] text-[15px] font-bold"
-                            >
-                              14/09/2021
-                            </td>
-                            <td class="px-6 py-4">
-                              <div class="flex gap-2">
-                                <button
-                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
-                                >
-                                  <img
-                                    width="36"
-                                    src="../assets/img/Icon-visibility.png"
-                                    alt=""
-                                  />
-                                </button>
-                                <button
-                                  class="shadow-[0px_2px_8px_rgba(0,0,0,0.12)] border-0"
-                                >
-                                  <img
-                                    width="36"
-                                    src="../assets/img/Icon-close.png"
-                                    alt=""
-                                  />
-                                </button>
-                              </div>
-                            </td>
-                          </tr>
-                        </tbody>
+                        <tbody id="product-table"></tbody>
                       </table>
                     </div>
                   </div>
@@ -474,141 +311,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
     <script src="/assets/scripts/postloadhtml.js"></script>
-    <div
-      id="default-modal"
-      tabindex="-1"
-      aria-hidden="true"
-      class="fixed top-0 left-0 right-0 z-50 items-center justify-center hidden w-full h-screen overflow-x-hidden overflow-y-auto"
-    >
-      <div
-        class="relative max-w-xl max-h-[400px] bg-white rounded-lg shadow w-[432px] overflow-y-scroll no-scrollbar"
-      >
-        <!-- Modal header -->
-        <div
-          class="flex items-center justify-between p-4 border-b rounded-t md:p-5"
-        >
-          <h3 class="text-xl font-semibold text-gray-900">Add New Product</h3>
-          <button
-            type="button"
-            class="inline-flex items-center justify-center w-8 h-8 text-sm text-gray-400 bg-transparent rounded-lg hover:bg-gray-200 hover:text-gray-900 ms-auto"
-            data-modal-hide="default-modal"
-          >
-            <svg
-              class="w-3 h-3"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 14 14"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-              />
-            </svg>
-            <span class="sr-only">Close modal</span>
-          </button>
-        </div>
-        <!-- Modal body -->
-        <form class="p-4 space-y-4 md:p-5">
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="email"
-              >Product Name</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="text"
-              name="product-name"
-              id="product-name"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Product Name"
-            />
-          </div>
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="description"
-              >Description</label
-            >
-            <textarea
-              style="background-color: #f4f4f4"
-              name="description"
-              id="description"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Description"
-            ></textarea>
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="price"
-              >Price</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="number"
-              name="price"
-              id="price"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Price"
-            />
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="stock-quantity"
-              >Stock Quantity</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="number"
-              name="stock-quantity"
-              id="stock-quantity"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Stock Quantity"
-            />
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="category"
-              >Category</label
-            >
-            <select
-              style="background-color: #f4f4f4"
-              name="category"
-              id="category"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-            >
-              <option value="men">Men</option>
-              <option value="women">Women</option>
-              <option value="men">Kids</option>
-            </select>
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="image-url"
-              >Upload Image</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="file"
-              name="image"
-              id="image"
-              class="box-border w-full border-0 rounded-lg outline-none"
-            />
-          </div>
-        </form>
-        <!-- Modal footer -->
-        <div
-          class="flex items-center p-4 border-t border-gray-200 rounded-b md:p-5"
-        >
-          <button
-            data-modal-hide="default-modal"
-            type="button"
-            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
-          >
-            Add
-          </button>
-        </div>
-      </div>
-    </div>
+    <script src="./products.js"></script>
   </body>
 </html>
