--- a/public/products/add-product/index.html
+++ b/public/products/add-product/index.html
@@ -218,7 +218,7 @@
       <div class="mt-20">
         <main class="bg-[#f4f4f4] w-full h-full px-8 py-6">
           <div class="flex flex-col gap-4">
-            <h1 class="my-8 text-5xl font-semibold">Product - ID</h1>
+            <h1 class="my-8 text-5xl font-semibold">Account - ID</h1>
             <section class="bg-[#fcfcfc] rounded-lg px-0 py-8">
               <div aria-hidden="true" class="w-full">
                 <div>
@@ -227,7 +227,7 @@
                     class="flex items-center justify-between p-4 border-b rounded-t md:p-5"
                   >
                     <h3 class="text-xl font-semibold text-gray-900">
-                      View Product
+                      Add Product
                     </h3>
                   </div>
                   <!-- Modal body -->
@@ -237,11 +237,10 @@
                         >Product Name</label
                       >
                       <input
-                        value="Product"
                         style="background-color: #f4f4f4"
                         type="text"
-                        name="product-name"
-                        id="product-name"
+                        name="name"
+                        id="name"
                         class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
                         placeholder="Enter Product Name"
                       />
@@ -256,9 +255,7 @@
                         style="background-color: #f4f4f4"
                         name="description"
                         id="description"
-                        rows="5"
                         class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-                        placeholder="Enter Description"
                       ></textarea>
                     </div>
 
@@ -279,14 +276,14 @@
                     <div class="flex flex-col gap-2 my-6">
                       <label
                         class="text-xs font-semibold leading-4"
-                        for="stock-quantity"
+                        for="stock_quantity"
                         >Stock Quantity</label
                       >
                       <input
                         style="background-color: #f4f4f4"
                         type="number"
-                        name="stock-quantity"
-                        id="stock-quantity"
+                        name="stock_quantity"
+                        id="stock_quantity"
                         class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
                         placeholder="Enter Stock Quantity"
                       />
@@ -306,7 +303,7 @@
                       >
                         <option value="men">Men</option>
                         <option value="women">Women</option>
-                        <option value="men">Kids</option>
+                        <option value="kids">Kids</option>
                       </select>
                     </div>
 
@@ -314,34 +311,34 @@
                       <label
                         class="text-xs font-semibold leading-4"
                         for="image-url"
-                        >Upload Image</label
+                        >Image URL</label
                       >
                       <input
                         style="background-color: #f4f4f4"
-                        type="file"
-                        name="image"
-                        id="image"
+                        type="text"
+                        name="image_url"
+                        id="image_url"
                         class="box-border w-full border-0 rounded-lg outline-none"
                       />
                     </div>
+                    <!-- Modal footer -->
+                    <div
+                      class="flex items-center gap-4 p-4 border-t border-gray-200 rounded-b md:p-5"
+                    >
+                      <button
+                        type="submit"
+                        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+                      >
+                        Add
+                      </button>
+                      <button
+                        type="reset"
+                        class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+                      >
+                        Reset
+                      </button>
+                    </div>
                   </form>
-                  <!-- Modal footer -->
-                  <div
-                    class="flex items-center p-4 border-t border-gray-200 rounded-b md:p-5"
-                  >
-                    <button
-                      type="button"
-                      class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
-                    >
-                      Update
-                    </button>
-                    <button
-                      type="button"
-                      class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
-                    >
-                      Delete
-                    </button>
-                  </div>
                 </div>
               </div>
             </section>
@@ -351,139 +348,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
     <script src="/assets/scripts/postloadhtml.js"></script>
-    <div
-      id="default-modal"
-      tabindex="-1"
-      aria-hidden="true"
-      class="fixed top-0 left-0 right-0 z-50 items-center justify-center hidden w-full h-screen overflow-x-hidden overflow-y-auto"
-    >
-      <div
-        class="relative max-w-xl max-h-[400px] bg-white rounded-lg shadow w-[432px] overflow-y-scroll no-scrollbar"
-      >
-        <!-- Modal header -->
-        <div
-          class="flex items-center justify-between p-4 border-b rounded-t md:p-5"
-        >
-          <h3 class="text-xl font-semibold text-gray-900">Add New Product</h3>
-          <button
-            type="button"
-            class="inline-flex items-center justify-center w-8 h-8 text-sm text-gray-400 bg-transparent rounded-lg hover:bg-gray-200 hover:text-gray-900 ms-auto"
-          >
-            <svg
-              class="w-3 h-3"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 14 14"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-              />
-            </svg>
-            <span class="sr-only">Close modal</span>
-          </button>
-        </div>
-        <!-- Modal body -->
-        <form class="p-4 space-y-4 md:p-5">
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="email"
-              >Product Name</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="text"
-              name="product-name"
-              id="product-name"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Product Name"
-            />
-          </div>
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="description"
-              >Description</label
-            >
-            <textarea
-              style="background-color: #f4f4f4"
-              name="description"
-              id="description"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Description"
-            ></textarea>
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="price"
-              >Price</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="number"
-              name="price"
-              id="price"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Price"
-            />
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="stock-quantity"
-              >Stock Quantity</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="number"
-              name="stock-quantity"
-              id="stock-quantity"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Stock Quantity"
-            />
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="category"
-              >Category</label
-            >
-            <select
-              style="background-color: #f4f4f4"
-              name="category"
-              id="category"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-            >
-              <option value="men">Men</option>
-              <option value="women">Women</option>
-              <option value="men">Kids</option>
-            </select>
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="image-url"
-              >Upload Image</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="file"
-              name="image"
-              id="image"
-              class="box-border w-full border-0 rounded-lg outline-none"
-            />
-          </div>
-        </form>
-        <!-- Modal footer -->
-        <div
-          class="flex items-center p-4 border-t border-gray-200 rounded-b md:p-5"
-        >
-          <button
-            type="button"
-            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
-          >
-            Add
-          </button>
-        </div>
-      </div>
-    </div>
+    <script src="./add-product.js"></script>
   </body>
 </html>
