--- a/public/products/edit-product/index.html
+++ b/public/products/edit-product/index.html
@@ -230,111 +230,23 @@
                     </h3>
                   </div>
                   <!-- Modal body -->
-                  <form class="p-4 space-y-4 md:p-5">
-                    <div class="flex flex-col gap-2 my-6">
-                      <label class="text-xs font-semibold leading-4" for="email"
-                        >Product Name</label
-                      >
-                      <input
-                        value="Product"
-                        style="background-color: #f4f4f4"
-                        type="text"
-                        name="product-name"
-                        id="product-name"
-                        class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-                        placeholder="Enter Product Name"
-                      />
-                    </div>
-                    <div class="flex flex-col gap-2 my-6">
-                      <label
-                        class="text-xs font-semibold leading-4"
-                        for="description"
-                        >Description</label
-                      >
-                      <textarea
-                        style="background-color: #f4f4f4"
-                        name="description"
-                        id="description"
-                        rows="5"
-                        class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-                        placeholder="Enter Description"
-                      ></textarea>
-                    </div>
-
-                    <div class="flex flex-col gap-2 my-6">
-                      <label class="text-xs font-semibold leading-4" for="price"
-                        >Price</label
-                      >
-                      <input
-                        style="background-color: #f4f4f4"
-                        type="number"
-                        name="price"
-                        id="price"
-                        class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-                        placeholder="Enter Price"
-                      />
-                    </div>
-
-                    <div class="flex flex-col gap-2 my-6">
-                      <label
-                        class="text-xs font-semibold leading-4"
-                        for="stock-quantity"
-                        >Stock Quantity</label
-                      >
-                      <input
-                        style="background-color: #f4f4f4"
-                        type="number"
-                        name="stock-quantity"
-                        id="stock-quantity"
-                        class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-                        placeholder="Enter Stock Quantity"
-                      />
-                    </div>
-
-                    <div class="flex flex-col gap-2 my-6">
-                      <label
-                        class="text-xs font-semibold leading-4"
-                        for="category"
-                        >Category</label
-                      >
-                      <select
-                        style="background-color: #f4f4f4"
-                        name="category"
-                        id="category"
-                        class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-                      >
-                        <option value="men">Men</option>
-                        <option value="women">Women</option>
-                        <option value="men">Kids</option>
-                      </select>
-                    </div>
-
-                    <div class="flex flex-col gap-2 my-6">
-                      <label
-                        class="text-xs font-semibold leading-4"
-                        for="image-url"
-                        >Upload Image</label
-                      >
-                      <input
-                        style="background-color: #f4f4f4"
-                        type="file"
-                        name="image"
-                        id="image"
-                        class="box-border w-full border-0 rounded-lg outline-none"
-                      />
-                    </div>
-                  </form>
+                  <form
+                    id="edit-product-form"
+                    class="p-4 space-y-4 md:p-5"
+                  ></form>
                   <!-- Modal footer -->
                   <div
                     class="flex items-center p-4 border-t border-gray-200 rounded-b md:p-5"
                   >
                     <button
+                      onclick="updateProduct()"
                       type="button"
                       class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
                     >
                       Update
                     </button>
                     <button
+                      onclick="deleteproduct()"
                       type="button"
                       class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
                     >
@@ -350,139 +262,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
     <script src="/assets/scripts/postloadhtml.js"></script>
-    <div
-      id="default-modal"
-      tabindex="-1"
-      aria-hidden="true"
-      class="fixed top-0 left-0 right-0 z-50 items-center justify-center hidden w-full h-screen overflow-x-hidden overflow-y-auto"
-    >
-      <div
-        class="relative max-w-xl max-h-[400px] bg-white rounded-lg shadow w-[432px] overflow-y-scroll no-scrollbar"
-      >
-        <!-- Modal header -->
-        <div
-          class="flex items-center justify-between p-4 border-b rounded-t md:p-5"
-        >
-          <h3 class="text-xl font-semibold text-gray-900">Add New Product</h3>
-          <button
-            type="button"
-            class="inline-flex items-center justify-center w-8 h-8 text-sm text-gray-400 bg-transparent rounded-lg hover:bg-gray-200 hover:text-gray-900 ms-auto"
-          >
-            <svg
-              class="w-3 h-3"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 14 14"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-              />
-            </svg>
-            <span class="sr-only">Close modal</span>
-          </button>
-        </div>
-        <!-- Modal body -->
-        <form class="p-4 space-y-4 md:p-5">
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="email"
-              >Product Name</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="text"
-              name="product-name"
-              id="product-name"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Product Name"
-            />
-          </div>
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="description"
-              >Description</label
-            >
-            <textarea
-              style="background-color: #f4f4f4"
-              name="description"
-              id="description"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Description"
-            ></textarea>
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="price"
-              >Price</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="number"
-              name="price"
-              id="price"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Price"
-            />
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="stock-quantity"
-              >Stock Quantity</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="number"
-              name="stock-quantity"
-              id="stock-quantity"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-              placeholder="Enter Stock Quantity"
-            />
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="category"
-              >Category</label
-            >
-            <select
-              style="background-color: #f4f4f4"
-              name="category"
-              id="category"
-              class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-            >
-              <option value="men">Men</option>
-              <option value="women">Women</option>
-              <option value="men">Kids</option>
-            </select>
-          </div>
-
-          <div class="flex flex-col gap-2 my-6">
-            <label class="text-xs font-semibold leading-4" for="image-url"
-              >Upload Image</label
-            >
-            <input
-              style="background-color: #f4f4f4"
-              type="file"
-              name="image"
-              id="image"
-              class="box-border w-full border-0 rounded-lg outline-none"
-            />
-          </div>
-        </form>
-        <!-- Modal footer -->
-        <div
-          class="flex items-center p-4 border-t border-gray-200 rounded-b md:p-5"
-        >
-          <button
-            type="button"
-            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
-          >
-            Add
-          </button>
-        </div>
-      </div>
-    </div>
+    <script src="./edit-product.js"></script>
   </body>
 </html>
