--- a/public/products/edit-product/index.html
+++ b/public/products/edit-product/index.html
@@ -236,7 +236,7 @@
                   ></form>
                   <!-- Modal footer -->
                   <div
-                    class="flex items-center p-4 border-t border-gray-200 rounded-b md:p-5"
+                    class="flex items-center gap-4 p-4 border-t border-gray-200 rounded-b md:p-5"
                   >
                     <button
                       onclick="updateProduct()"
