--- a/public/index.html
+++ b/public/index.html
@@ -254,7 +254,9 @@
                         </svg>
                       </div>
                       <div>
-                        <h3 class="text-[32px] font-semibold">32</h3>
+                        <h3 id="products" class="text-[32px] font-semibold">
+                          32
+                        </h3>
                         <p class="font-semibold text-[#6f767e]">Products</p>
                       </div>
                     </div>
@@ -285,7 +287,9 @@
                         </svg>
                       </div>
                       <div>
-                        <h3 class="text-[32px] font-semibold">124</h3>
+                        <h3 id="orders" class="text-[32px] font-semibold">
+                          124
+                        </h3>
                         <p class="font-semibold text-[#6f767e]">
                           Pending Orders
                         </p>
@@ -315,7 +319,7 @@
                         </svg>
                       </div>
                       <div>
-                        <h3 class="text-[32px] font-semibold">20</h3>
+                        <h3 id="users" class="text-[32px] font-semibold">20</h3>
                         <p class="font-semibold text-[#6f767e]">Users</p>
                       </div>
                     </div>
@@ -412,5 +416,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
     <script src="/assets/scripts/postloadhtml.js"></script>
+    <script src="./assets/scripts/getnumbers.js"></script>
   </body>
 </html>
