--- a/public/orders/index.html
+++ b/public/orders/index.html
@@ -225,13 +225,14 @@
               >
                 <div class="flex flex-col gap-2 md:flex-row">
                   <select
+                    onchange="handleOrderStatusChange(this.value)"
                     name="stats-span"
                     id="stats-span"
                     class="box-border bg-[#fcfcfc] text-[#6f767e] text-[13px] font-semibold leading-[17px] px-6 py-2 rounded-lg border-2 border-solid border-[#efefef]"
                   >
                     <option value="all-ordres">All Orders</option>
-                    <option value="pending-orders">Pending Orders</option>
-                    <option value="completed-orders">Completed Orders</option>
+                    <option value="pending">Pending Orders</option>
+                    <option value="completed">Completed Orders</option>
                   </select>
                 </div>
               </div>
