--- a/public/products/index.html
+++ b/public/products/index.html
@@ -225,11 +225,12 @@
               >
                 <div class="flex flex-col gap-2 md:flex-row">
                   <select
+                    onchange="handleCategoryChange(this.value)"
                     name="stats-span"
                     id="stats-span"
                     class="box-border bg-[#fcfcfc] text-[#6f767e] text-[13px] font-semibold leading-[17px] px-6 py-2 rounded-lg border-2 border-solid border-[#efefef]"
                   >
-                    <option value="all">All Products</option>
+                    <option selected value="all">All</option>
                     <option value="men">Men</option>
                     <option value="women">Women</option>
                     <option value="kid">Kids</option>
@@ -237,8 +238,6 @@
                 </div>
                 <div>
                   <button
-                    data-modal-target="default-modal"
-                    data-modal-toggle="default-modal"
                     class="box-border px-4 py-2 text-sm font-semibold leading-4 text-white bg-blue-700 rounded-lg cursor-pointer hover:bg-blue-800"
                   >
                     <a href="./add-product/"> Add Product </a>
