--- a/public/products/add-product/index.html
+++ b/public/products/add-product/index.html
@@ -238,24 +238,11 @@
                       <input
                         style="background-color: #f4f4f4"
                         type="text"
-                        name="name"
-                        id="name"
+                        name="title"
+                        id="title"
                         class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
                         placeholder="Enter Product Name"
                       />
-                    </div>
-                    <div class="flex flex-col gap-2 my-6">
-                      <label
-                        class="text-xs font-semibold leading-4"
-                        for="description"
-                        >Description</label
-                      >
-                      <textarea
-                        style="background-color: #f4f4f4"
-                        name="description"
-                        id="description"
-                        class="w-full box-border text-[#6f767e] font-medium leading-6 px-4 py-2 rounded-lg border-0 outline-none"
-                      ></textarea>
                     </div>
 
                     <div class="flex flex-col gap-2 my-6">
@@ -309,14 +296,14 @@
                     <div class="flex flex-col gap-2 my-6">
                       <label
                         class="text-xs font-semibold leading-4"
-                        for="image-url"
+                        for="image"
                         >Image URL</label
                       >
                       <input
                         style="background-color: #f4f4f4"
                         type="text"
-                        name="image_url"
-                        id="image_url"
+                        name="image"
+                        id="image"
                         class="box-border w-full border-0 rounded-lg outline-none"
                       />
                     </div>
